fix scrollbar

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -8,9 +8,11 @@
   .admin-content {
     width: 100%;
     .admin-header {
+      height: 40px;
     }
 
     .admin-main {
+      height: calc(100vh - 40px);
     }
   }
 }
